--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="steps_chart_wrapp">
+			</div>			
+			<div class="steps_chart_wrapp">
+				<div class="row">
 					<ul class="steps_chart">
 						<li>
 							<img src="img/" alt="" />
@@ -113,34 +115,36 @@
 						</li>
 					</ul>
 				</div>
-
-				<div class="h2_wrapp">
-					<h2>WHAT iS <br /><span class="orange right_orange">KETO?</span></h2>
-					<div class="h2_descript"><span>MOST EFFECTIVE DIET</span></div>
-				</div>
-
-				<div class="article_1">
-					<div class="col">
-						<div class="article_1_item article_1_item_2">
-							<h3>KETO DIET IS</h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,</p>
-							<div class="info_orange">
-								<div class="inner_circle">
-									<p class="p_1">GET<span>PERSONALiZED</span></p>
-									<p class="p_2">KETO</p>
-									<p class="p_3">DIET</p>
+			</div>
+			<div style="background: rgba(33, 53, 8, .7);">
+				<div class="row">
+					<div class="h2_wrapp">
+						<h2>WHAT iS <br /><span class="orange right_orange">KETO?</span></h2>
+						<div class="h2_descript"><span>MOST EFFECTIVE DIET</span></div>
+					</div>
+					<div class="article_1">
+						<div class="col">
+							<div class="article_1_item article_1_item_2">
+								<h3>KETO DIET IS</h3>
+								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,</p>
+								<div class="info_orange">
+									<div class="inner_circle">
+										<p class="p_1">GET<span>PERSONALiZED</span></p>
+										<p class="p_2">KETO</p>
+										<p class="p_3">DIET</p>
+									</div>
 								</div>
 							</div>
+							<div class="article_1_item">
+								<h3 class="green">WHY KETO?</h3>
+								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+							</div>
 						</div>
-						<div class="article_1_item">
-							<h3 class="green">WHY KETO?</h3>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-						</div>
-					</div>
-					<div class="col clearfix">
-						<div class="circle_image_box">
-							<div class="inner">
-								<img src="img/image_01.jpg" alt="" />
+						<div class="col clearfix">
+							<div class="circle_image_box">
+								<div class="inner">
+									<img src="img/image_01.jpg" alt="" />
+								</div>
 							</div>
 						</div>
 					</div>
