--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
 		<!-- Section 3 - Main Page -->
 
-		<section style="background-color: #00a587;">
+		<section class="sect_3" style="background-color: #00a587;">
 			<div class="row">
 				<div class="items_sect">
 					<div class="h2_wrapp_2">
