--- a/index.html
+++ b/index.html
@@ -96,22 +96,60 @@
 			<div class="steps_chart_wrapp">
 				<div class="row">
 					<ul class="steps_chart">
-						<li>
-							<img src="img/" alt="" />
+						<li class="active">
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
 							<p class="percent_val">0%</p>
 						</li>
 						<li>
-							<img src="img/" alt="" />
-							<p class="percent_val">0%</p>
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
+							<p class="percent_val">10%</p>
 						</li>
 						<li>
-							<img src="img/" alt="" />
-							<p class="percent_val">0%</p>
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
+							<p class="percent_val">20%</p>
 						</li>
-
 						<li>
-							<img src="img/" alt="" />
-							<p class="percent_val">0%</p>
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
+							<p class="percent_val">30%</p>
+						</li>
+						<li>
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
+							<p class="percent_val">40%</p>
+						</li>
+						<li>
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
+							<p class="percent_val">50%</p>
+						</li>
+						<li>
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
+							<p class="percent_val">60%</p>
+						</li>
+						<li>
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
+							<p class="percent_val">70%</p>
+						</li>
+						<li>
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
+							<p class="percent_val">80%</p>
+						</li>
+						<li>
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
+							<p class="percent_val">90%</p>
+						</li>
+						<li>
+							<p class="step_name">Gender</p>
+							<img src="img/lime_ruller.svg" alt="" />
+							<p class="percent_val">100%</p>
 						</li>
 					</ul>
 				</div>
