--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 							<p class="green_p">Unique composed diets</p>
 						</div>
 						<div class="img_box">
-							<img src="img/" alt="" />
+							<img src="img/photo_07.jpg" alt="" />
 						</div>
 					</div>
 					<div class="thumb_1">
@@ -392,7 +392,7 @@
 							<p class="green_p">People have successfully lost excess weight</p>
 						</div>
 						<div class="img_box">
-							<img src="img/" alt="" />
+							<img src="img/photo_09.jpg" alt="" />
 						</div>
 					</div>
 					<div class="thumb_1">
@@ -406,7 +406,7 @@
 							<p class="green_p">The most popular diet for weight loss</p>
 						</div>
 						<div class="img_box">
-							<img src="img/" alt="" />
+							<img src="img/photo_11.jpg" alt="" />
 						</div>
 					</div>
 					<div class="thumb_1">
@@ -420,7 +420,7 @@
 							<p class="green_p">Positive reviews</p>
 						</div>
 						<div class="img_box">
-							<img src="img/" alt="" />
+							<img src="img/photo_13.jpg" alt="" />
 						</div>
 					</div>
 				</div>
